# pipeline-youtube-SDK

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.global.md  CLAUDE.md  README.md  config.example.json  glossary.json  pyproject.toml
.claude/: README.md  claude-security-guidance.md  settings.json
.claude/hooks/: block-secret-egress.py  jst-timestamp.sh  session-start.sh
.claude/skills/ops-logging/: SKILL.md  capture-command.sh  push-log.sh
.claude/skills/py-coding-conventions/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: codeql.yml  main.yml  release.yml
docker/: Dockerfile.capture
docs/: agent-teams-profiles.md  ai-coding-conventions.md  cli.md  di-migration-summary.md  docker.md  local-media.md  main-architecture.md  parallelization-effectiveness.md  sample-run.md  sub-agents.md  transcribe.md  whisper.md
pipeline_youtube/: __init__.py  cache.py  capture_runtime.py  checkpoint.py  cli.py  cli_config.py  cli_types.py  cli_validation.py  code_fetch.py  command.py  config.py  execution_plan.py  genres.py  input_resolver.py  local_media.py  main.py  obsidian.py  parallel.py  path_safety.py  pipeline.py  pipeline_runner.py  playlist.py  proper_noun_sheet.py  provider_runtime.py  reporting.py  resume.py  run_result.py  runtime.py  sanitize.py  stats.py  synthesis_runner.py  video_processing.py
pipeline_youtube/domain/: __init__.py  errors.py  results.py  transcript.py  video.py
pipeline_youtube/evaluation/: __init__.py  evaluators.py  fidelity.py  report.py  routing.py  schemas.py
pipeline_youtube/evaluation/skills/: __init__.py  coverage_rubric.md  pedagogy_rubric.md
pipeline_youtube/glossary/: __init__.py  fold.py  normalizer.py  proper_nouns.py  schema.py  text.py
pipeline_youtube/providers/: __init__.py  anthropic_sdk.py  base.py  base_url_policy.py  openai_compat.py  registry.py  selection.py
pipeline_youtube/services/: __init__.py  cache.py  checkpoint.py  confusables.py  obsidian.py  path_safety.py  sanitize.py
pipeline_youtube/stages/: capture.py  capture_backend.py  evaluation.py  learning.py  scripts.py  summary.py  synthesis.py
pipeline_youtube/synthesis/: agents.py  body_validator.py  chapter.py  moc.py  scoring.py
pipeline_youtube/transcript/: auto.py  base.py  chunking.py  correction.py  innertube.py  official.py  whisper_fallback.py
scripts/: verify_innertube.py
tests/: conftest.py  test_anthropic_provider.py  test_base_url_policy.py  test_body_validator.py  test_cache.py  test_capture_backend.py  test_capture_helpers.py  test_capture_stage.py  test_chapter_filename_hardening.py  test_checkpoint.py  test_checkpoint_hardening.py  test_chunking.py  test_chunking_fillers.py  test_code_fetch.py  test_config_models.py  test_confusables.py  test_cost_breakdown.py  test_domain_reexports.py  test_domain_results.py  test_domain_transcript.py  test_domain_video.py  test_e2e_playlist.py  test_evaluation_cli.py  test_evaluation_evaluators.py  test_evaluation_fidelity.py  test_evaluation_routing.py  test_evaluation_schemas.py  test_evaluation_skills.py  test_evaluation_stage.py  test_frontmatter_allowlist.py  test_genres.py  test_glossary_merge.py  test_glossary_normalizer.py  test_glossary_proper_nouns.py  test_glossary_schema.py  test_glossary_text.py  test_learning_code_bearing.py  test_learning_mapping.py  test_learning_stage.py  test_llm_cache.py  (+43 more)
